--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,4 @@
+
 name: Build README
 on:
   push:
@@ -15,11 +16,10 @@ jobs:
         # necessary for github-action-til-autoformat-readme
         fetch-depth: 0
     - name: Autoformat README
-      uses: cflynn07/github-action-til-autoformat-readme@1.2.0
+      uses: cflynn07/github-action-til-autoformat-readme@1.1.0
       with:
         description: |
-            Today I Learned
-            2022.09 ~ 
+          Today I Learn
         footer: |
           [1]: https://simonwillison.net/2020/Apr/20/self-rewriting-readme/
           [2]: https://github.com/jbranchaud/til
